--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adonis-acl-with-context",
-  "version": "0.1.1",
-  "description": "Adonis ACL system",
+  "version": "0.1.3",
+  "description": "Adonis ACL with context system",
   "main": "src/Acl/index.js",
   "directories": {
     "test": "test"
